# camera2demo

./: README.md
camerademo/: settings.gradle
camerademo/app/: CMakeLists.txt  build.gradle
camerademo/app/src/androidTest/java/com/ke/zhu/camerademo/: ExampleInstrumentedTest.java
camerademo/app/src/main/: AndroidManifest.xml
camerademo/app/src/main/java/com/ke/zhu/camerademo/: Callback.java  CameraHelp.java  JniUtils.java  MainActivity.java  YUVUtils.java
camerademo/app/src/main/java/com/ke/zhu/camerademo/UI/: AVEncoderActivity.java  AVEncoderActivity2.java  AudioRecordActivity.java  CameraActivity.java  EncoderActivity.java  TestActivity.java
camerademo/app/src/main/java/com/ke/zhu/camerademo/com/: Contans.java
camerademo/app/src/main/java/com/ke/zhu/camerademo/medio/: AVmediaMuxer.java  AudioRecord.java  VideoEncoder.java
camerademo/app/src/main/java/com/ke/zhu/camerademo/opengl/: MyRenderer.java
camerademo/app/src/main/java/com/ke/zhu/camerademo/util/: AVEncoder.java  AVMuxer.java  AudioRecording.java  CameraHelp.java  H264Encoder.java  PcmToWavUtil.java  YUVUtils.java
camerademo/app/src/main/jni/: com_ke_zhu_camerademo_JniUtils.cpp
camerademo/app/src/main/jniLibs/include/: com_ke_zhu_camerademo_JniUtils.h
camerademo/app/src/main/res/layout/: activity_audio_record.xml  activity_camera.xml  activity_main.xml
camerademo/app/src/test/java/com/ke/zhu/camerademo/: ExampleUnitTest.java
camerademo/gradle/wrapper/: gradle-wrapper.properties
